--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -13,6 +13,9 @@ target_link_libraries(key_listener PUBLIC threepp)
 add_executable(mouse_listener mouse_listener.cpp)
 target_link_libraries(mouse_listener PUBLIC threepp)
 
+add_executable(raycast raycast.cpp)
+target_link_libraries(raycast PUBLIC threepp)
+
 add_executable(test_capabilites test_capabilites.cpp)
 target_link_libraries(test_capabilites
         PUBLIC
