fix lights, add spotlight

--- a/examples/lights/CMakeLists.txt
+++ b/examples/lights/CMakeLists.txt
@@ -3,5 +3,8 @@ include_directories(test ${CMAKE_SOURCE_DIR}/include)
 add_executable(point_light point_light.cpp)
 target_link_libraries(point_light PUBLIC threepp)
 
+add_executable(spot_light spot_light.cpp)
+target_link_libraries(spot_light PUBLIC threepp)
+
 add_executable(directional directional.cpp)
 target_link_libraries(directional PUBLIC threepp)
