--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(texture2d PUBLIC threepp)
 add_executable(points_demo points_demo.cpp)
 target_link_libraries(points_demo PUBLIC threepp)
 
+add_subdirectory(geometries)
 add_subdirectory(materials)
 add_subdirectory(shaders)
 add_subdirectory(lights)
