Add watershader and cleanup reflector

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,5 +16,6 @@ target_link_libraries(points_demo PUBLIC threepp)
 add_subdirectory(geometries)
 add_subdirectory(materials)
 add_subdirectory(shaders)
+add_subdirectory(objects)
 add_subdirectory(lights)
 add_subdirectory(misc)
