--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Configure and build
       run: |
-        cmake . -B build
+        cmake . -B build -DCMAKE_BUILD_TYPE=Release
         cmake --build build
 
   conan-on-windows:
@@ -47,7 +47,7 @@ jobs:
 
       - name: Configure and build
         run: |
-          cmake . -A x64 -B build
+          cmake . -A x64 -B build -DCMAKE_BUILD_TYPE=Release
           cmake --build build --config Release
 
   conan-on-darwin:
@@ -67,5 +67,5 @@ jobs:
 
       - name: Configure and build
         run: |
-          cmake . -B build
+          cmake . -B build -DCMAKE_BUILD_TYPE=Release
           cmake --build build
