--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,52 @@
 cmake_minimum_required(VERSION 3.10)
 project(threepp)
 
-set(CMAKE_CXX_STANDARD 17)
+# ==============================================================================
+# Global internal configuration
+# ==============================================================================
 
-if (EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-    conan_basic_setup(TARGETS)
-else ()
-    message(FATAL_ERROR "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first!")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
+
+# ==============================================================================
+# Conan setup
+# ==============================================================================
+
+# Download automatically, you can also just copy the conan.cmake file
+if (NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+    file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/master/conan.cmake"
+            "${CMAKE_BINARY_DIR}/conan.cmake")
 endif ()
+
+include(${CMAKE_BINARY_DIR}/conan.cmake)
+
+conan_cmake_run(
+        REQUIRES
+        glfw/3.3.4
+        glad/0.1.34
+        stb/20200203
+        OPTIONS
+        glad:gl_version=4.1
+        GENERATORS
+        cmake
+        BUILD missing
+        SETTINGS build_type=${CMAKE_BUILD_TYPE}
+        BASIC_SETUP CMAKE_TARGETS)
+
+
+# ==============================================================================
+# Source code
+# ==============================================================================
 
 add_subdirectory(src)
 add_subdirectory(examples)
 
 
-# Copy application resources
+# ==============================================================================
+# Application resources
+# ==============================================================================
 
 # Shaders
 file(COPY "${CMAKE_SOURCE_DIR}/src/threepp/renderers/shaders/ShaderChunk" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin)
