--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -21,7 +21,37 @@ jobs:
 
     - name: Install prerequisites
       run: |
-        sudo apt-get install -y libgl1-mesa-dev
+        sudo apt-get install -y \
+        libx11-xcb-dev \
+        libfontenc-dev\
+        libxaw7-dev\
+        libxcomposite-dev\
+        libxcursor-dev\
+        libxdamage-dev\
+        libxfixes-dev\
+        libxi-dev\
+        libxinerama-dev\
+        libxmu-dev\
+        libxmuu-dev\
+        libxpm-dev\
+        libxrandr-dev\
+        libxres-dev\
+        libxss-dev\
+        libxtst-dev\
+        libxv-dev\
+        libxvmc-dev\
+        libxxf86vm-dev\
+        libxcb-render-util0-dev\
+        libxcb-xkb-dev\
+        libxcb-icccm4-dev\ 
+        libxcb-image0-dev\ 
+        libxcb-keysyms1-dev\ 
+        libxcb-randr0-dev\ 
+        libxcb-shape0-dev\ 
+        libxcb-sync-dev\ 
+        libxcb-xfixes0-dev\ 
+        libxcb-xinerama0-dev\ 
+        libxcb-dri3-dev
         sudo pip3 install --upgrade setuptools pip
         sudo pip3 install conan
 
