--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -24,44 +24,47 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Install prerequisites
         run: |
-          sudo apt-get install -y \
-          libx11-xcb-dev \
-          libfontenc-dev\
-          libxaw7-dev\
-          libxcomposite-dev\
-          libxcursor-dev\
-          libxdamage-dev\
-          libxfixes-dev\
-          libxi-dev\
-          libxinerama-dev\
-          libxmu-dev\
-          libxmuu-dev\
-          libxpm-dev\
-          libxrandr-dev\
-          libxres-dev\
-          libxss-dev\
-          libxtst-dev\
-          libxv-dev\
-          libxvmc-dev\
-          libxxf86vm-dev\
-          libxcb-render-util0-dev\
-          libxcb-xkb-dev\
-          libxcb-icccm4-dev\
-          libxcb-image0-dev\
-          libxcb-keysyms1-dev\
-          libxcb-randr0-dev\
-          libxcb-shape0-dev\
-          libxcb-sync-dev\
-          libxcb-xfixes0-dev\
-          libxcb-xinerama0-dev\
-          libxcb-dri3-dev
+#          sudo apt-get install -y \
+#          libx11-xcb-dev \
+#          libfontenc-dev\
+#          libxaw7-dev\
+#          libxcomposite-dev\
+#          libxcursor-dev\
+#          libxdamage-dev\
+#          libxfixes-dev\
+#          libxi-dev\
+#          libxinerama-dev\
+#          libxmu-dev\
+#          libxmuu-dev\
+#          libxpm-dev\
+#          libxrandr-dev\
+#          libxres-dev\
+#          libxss-dev\
+#          libxtst-dev\
+#          libxv-dev\
+#          libxvmc-dev\
+#          libxxf86vm-dev\
+#          libxcb-render-util0-dev\
+#          libxcb-xkb-dev\
+#          libxcb-icccm4-dev\
+#          libxcb-image0-dev\
+#          libxcb-keysyms1-dev\
+#          libxcb-randr0-dev\
+#          libxcb-shape0-dev\
+#          libxcb-sync-dev\
+#          libxcb-xfixes0-dev\
+#          libxcb-xinerama0-dev\
+#          libxcb-dri3-dev
           sudo pip3 install --upgrade setuptools pip
           sudo pip3 install conan
+
       - name: Configure Conan
         run: |
           conan remote add ais https://ais.jfrog.io/artifactory/api/conan/ais-conan --force
+
       - name: Conan create
         run: |
           REFNAME="${GITHUB_REF#refs/*/}"
@@ -73,6 +76,7 @@ jobs:
             CHANNEL="testing-${SHORT_REFNAME//\//_}"
           fi
           conan create -s build_type=${{ matrix.build_type }} -s compiler.version=${{ matrix.compiler_version }} -b missing . ais/${CHANNEL}
+
       - name: Conan upload
         run: conan upload --all --confirm --remote ais 'threepp*'
 
@@ -87,13 +91,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Install prerequisites
         run: |
           pip3 install --upgrade setuptools pip
           pip3 install conan
+
       - name: Configure Conan
         run: |
           conan remote add ais https://ais.jfrog.io/artifactory/api/conan/ais-conan --force
+
       - name: Conan create
         shell: bash
         run: |
@@ -106,5 +113,6 @@ jobs:
             CHANNEL="testing-${SHORT_REFNAME//\//_}"
           fi
           conan create -s build_type=${{ matrix.build_type }} -b missing . ais/${CHANNEL}
+
       - name: Conan upload
         run: conan upload --all --confirm --remote ais 'threepp*'
