--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -52,7 +52,8 @@ jobs:
         libxcursor-dev \
         libxdamage-dev \
         libxinerama-dev \
-        libxrandr-dev
+        libxrandr-dev \
+        libxcb-util-dev
         sudo pip3 install --upgrade setuptools pip
         sudo pip3 install conan
 
