--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -68,7 +68,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, windows-2020]
+        os: [windows-2019]
 
     steps:
       - uses: actions/checkout@v2
