--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -89,7 +89,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, windows-2020]
+        os: [windows-2019]
         build_type: [Debug, Release]
 
     steps:
