--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -18,21 +18,56 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-20.04]
         build_type: [Debug, Release]
-        compiler_version: [7, 9]
-        compiler_libcxx: [libstdc++11]
+        compiler_version: [9]
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Install prerequisites
         run: |
-          sudo apt-get install -y libgl1-mesa-dev
+          sudo apt update
+          sudo apt install -y \
+          libgl-dev \
+          libfontenc-dev \
+          libxaw7-dev \
+          libxkbfile-dev \
+          libxmu-dev \
+          libxmuu-dev \
+          libxpm-dev \
+          libxres-dev \
+          libxss-dev \
+          libxt-dev \
+          libxtst-dev \
+          libxv-dev \
+          libxvmc-dev \
+          libxxf86vm-dev \
+          libxcb-render-util0-dev \
+          libxcb-xkb-dev \
+          libxcb-icccm4-dev \
+          libxcb-image0-dev \
+          libxcb-keysyms1-dev \
+          libxcb-randr0-dev \
+          libxcb-shape0-dev \
+          libxcb-sync-dev \
+          libxcb-xfixes0-dev \
+          libxcb-xinerama0-dev \
+          libxcb-dri3-dev \
+          libx11-xcb-dev \
+          libxcomposite-dev \
+          libxcursor-dev \
+          libxdamage-dev \
+          libxinerama-dev \
+          libxrandr-dev \
+          libxcb-util-dev
           sudo pip3 install --upgrade setuptools pip
           sudo pip3 install conan
+
       - name: Configure Conan
         run: |
           conan remote add ais https://ais.jfrog.io/artifactory/api/conan/ais-conan --force
+
       - name: Conan create
         run: |
           REFNAME="${GITHUB_REF#refs/*/}"
@@ -43,7 +78,8 @@ jobs:
             SHORT_REFNAME="${REFNAME:0:40}"
             CHANNEL="testing-${SHORT_REFNAME//\//_}"
           fi
-          conan create -s build_type=${{ matrix.build_type }} -s compiler.version=${{ matrix.compiler_version }} -s compiler.libcxx=${{ matrix.compiler_libcxx }} -b missing . ais/${CHANNEL}
+          conan create -s build_type=${{ matrix.build_type }} -s compiler.version=${{ matrix.compiler_version }} -b missing . ais/${CHANNEL}
+
       - name: Conan upload
         run: conan upload --all --confirm --remote ais 'threepp*'
 
@@ -53,18 +89,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2016, windows-2019]
+        os: [windows-2019]
         build_type: [Debug, Release]
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Install prerequisites
         run: |
           pip3 install --upgrade setuptools pip
           pip3 install conan
+
       - name: Configure Conan
         run: |
           conan remote add ais https://ais.jfrog.io/artifactory/api/conan/ais-conan --force
+
       - name: Conan create
         shell: bash
         run: |
@@ -77,5 +116,6 @@ jobs:
             CHANNEL="testing-${SHORT_REFNAME//\//_}"
           fi
           conan create -s build_type=${{ matrix.build_type }} -b missing . ais/${CHANNEL}
+
       - name: Conan upload
         run: conan upload --all --confirm --remote ais 'threepp*'
