--- a/examples/bullet/CMakeLists.txt
+++ b/examples/bullet/CMakeLists.txt
@@ -1,3 +1,3 @@
 
 add_executable(hello_bullet hello_bullet.cpp BulletEngine.cpp)
-target_link_libraries(hello_bullet PUBLIC threepp PRIVATE CONAN_PKG::bullet3)
+target_link_libraries(hello_bullet PUBLIC threepp PRIVATE Bullet::Bullet)
