--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -57,6 +57,10 @@ jobs:
         sudo pip3 install --upgrade setuptools pip
         sudo pip3 install conan
 
+    - name: Run conan
+      run: |
+        conan install . -s build_type=Release -if build -b missing
+
     - name: Configure and build
       run: |
         cmake . -B build -DCMAKE_BUILD_TYPE=Release
@@ -93,6 +97,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Run conan
+        run: |
+          conan install . -s build_type=Release -if build -b missing
+
       - name: Configure and build
         run: |
           cmake . -A x64 -B build -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE="Release"
@@ -112,6 +120,10 @@ jobs:
       - name: Install prerequisites
         run: |
           pip3 install conan
+
+      - name: Run conan
+        run: |
+          conan install . -s build_type=Release -if build -b missing
 
       - name: Configure and build
         run: |
