--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -190,6 +190,7 @@ set(sources
         "threepp/helpers/ArrowHelper.cpp"
 
         "threepp/loaders/stb.cpp"
+        "threepp/loaders/STLLoader.cpp"
         "threepp/loaders/ImageLoader.cpp"
         "threepp/loaders/TextureLoader.cpp"
 
